aptsh (0.0.5) unstable; urgency=low

  * Aptsh used to crash when line was NULL (now exits). Closes: #333550.
  * Fixed PS1 in default configuration file which had been causing libreadline
    to mess up the screen when line was too long. Closes: #334130. 

 -- Marcin Wrochniak <wrochniak@gmail.com>  Sun, 16 Oct 2005 14:33:41 +0200

aptsh (0.0.4) unstable; urgency=low

  * Initial Release.
  * This is the first release with packages not generated automatically.
  * ITP. Closes: #330342.

 -- Marcin Wrochniak <wrochniak@gmail.com>  Tue, 27 Sep 2005 18:53:59 +0200
