@@ -2,7 +2,7 @@
 .SH NAME
 aptsh \- interactive APT shell
 .SH SYNOPSIS
-aptsh [-c, --config-file
+aptsh [-?, --help] [-c, --config-file
 .I configuration_file
 ] [-s, --storing] [-v, --version] [-x, --execute
 .I aptsh_command
